--- a/views/account.ejs
+++ b/views/account.ejs
@@ -231,7 +231,7 @@
             <div class="card bg-warning">
                 <div class="card-body">
                     <h5 class="card-title"><i class="bi bi-chat-left-text"></i> Yorumlarım</h5>
-                    <p class="card-text">Toplam <%= statistics.totalComments %> yorum</p>
+                    <p class="card-text">Toplam <%= statistics.totalComments %> yorumun var</p>
                     <a href="/account/mycomments" class="btn btn-light">Tümünü Görüntüle</a>
                 </div>
             </div>
