--- a/views/admin/admin-panel.ejs
+++ b/views/admin/admin-panel.ejs
@@ -13,11 +13,6 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin-panel/users">
-                        <i class="bi bi-people"></i> Üyeler
-                    </a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="/admin-panel/books">
                         <i class="bi bi-book"></i> Kitaplar
                     </a>
@@ -25,6 +20,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">
                         <i class="bi bi-ui-checks-grid"></i> Kategoriler
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin-panel/users">
+                        <i class="bi bi-people"></i> Üyeler
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin-panel/comments">
+                        <i class="bi bi-chat-left-text"></i> Yorumlar
                     </a>
                 </li>
                 <li class="nav-item">
@@ -58,8 +63,18 @@
                     <div class="card text-white bg-primary">
                         <div class="card-body">
                             <h5 class="card-title"><i class="bi bi-people-fill"></i> Üyeler</h5>
-                            <p class="card-text">Toplam <%= statistics.totalUser %> kişi</p>
+                            <p class="card-text">Toplam <%= statistics.totalUser %> kişi üye</p>
                             <a href="/admin-panel/users" class="btn btn-light">Tümünü Görüntüle</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card bg-warning">
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="bi bi-chat-left-text"></i> Yorumlar</h5>
+                            <p class="card-text">Toplam <%= statistics.totalComments %> yorum var</p>
+                            <a href="/admin-panel/comments" class="btn btn-light">Tümünü Görüntüle</a>
                         </div>
                     </div>
                 </div>
@@ -70,16 +85,6 @@
                             <h5 class="card-title">Analytics</h5>
                             <p class="card-text">Check your analytics data.</p>
                             <a href="#" class="btn btn-light">View Analytics</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card text-white bg-warning">
-                        <div class="card-body">
-                            <h5 class="card-title">Settings</h5>
-                            <p class="card-text">Adjust your settings here.</p>
-                            <a href="#" class="btn btn-light">View Settings</a>
                         </div>
                     </div>
                 </div>
