--- a/views/admin/delete-book.ejs
+++ b/views/admin/delete-book.ejs
@@ -20,9 +20,10 @@
                 <li class="breadcrumb-item active" aria-current="page">Kitabı Sil</li>
             </ol>
         </nav>
-    </div>
-    <div class="container-fluid">
-        <div class="text-center"><a href="/admin-panel/books" class="btn bg-primary text-light w-100" role="button">Tüm Kitapları Listele</a></div>
+        <div class="d-flex align-items-center mb-3">
+            <a href="/admin-panel/books" class="btn btn-primary d-inline"><i class="bi bi-arrow-left"></i> Geri</a>
+            <h1 class="d-inline m-auto ms-2">Kitap Silme</h1>
+        </div>
     </div>
 </main>
 <a class="btn text-bg-primary position-fixed top-0 end-0 m-1 p-2 rounded-circle d-flex justify-content-center align-items-center" style="width: 2.5em;height: 2.5em;" role="button" href="/admin-panel"><i class="bi bi-person-gear"></i></a>
