--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -8,7 +8,7 @@
                         <th scope="col">İsim</th>
                         <th scope="col">Soyisim</th>
                         <th scope="col">E-posta</th>
-                        <th scope="col">Rol</th>
+                        <th scope="col">Yetki</th>
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
