--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,7 +49,10 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
                         <% if(isAuthenticated) { %>
-                            <li><a class="dropdown-item" href="/account">Hesabım</a></li>
+                            <li><a class="dropdown-item" href="/account"><i class="bi bi-person-circle"></i> Hesabım</a></li>
+                            <% if(userRole === 'admin') { %>
+                              <li><a class="dropdown-item" href="/admin-panel"><i class="bi bi-person-gear"></i> Yönetici Paneli</a></li>
+                            <% } %>
                             <li><hr class="dropdown-divider"></li>
                             <li>
                                 <a class="nav-link link-danger ms-2" href="/logout">
