--- a/views/admin/book-detail.ejs
+++ b/views/admin/book-detail.ejs
@@ -8,12 +8,12 @@
             </ol>
         </nav>
     </div>
+    <div class="d-flex align-items-center mb-3 no-print">
+        <a href="/admin-panel/books" class="btn btn-primary d-inline"><i class="bi bi-arrow-left"></i> Geri</a>
+        <h1 class="d-inline m-auto ms-2">Kitap Detayı</h1>
+    </div>
 
     <div class="container-fluid bg-white mb-5 border border-dark-subtle rounded-3 p-3 print">
-        <div class="d-flex align-items-center mb-3 no-print">
-            <a href="/admin-panel/books" class="btn btn-primary d-inline"><i class="bi bi-arrow-left"></i> Geri</a>
-            <h1 class="d-inline m-auto ms-2">Kitabı Düzenle</h1>
-        </div>
         <div class="row">
             <h1><%= book.name %></h1>
         </div>
