--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,9 @@
     <div class="row">
         <div class="col-12 mb-4 text-center">
             <% if(isAuthenticated) { %>
-                <h1>Kitap Bilgi Portalı'na Hoş Geldin <%= user.name %></h1>
+                <h1>Kitap Bilgi Portalı'na<br>Hoş Geldin <%= user.name %></h1>
             <% } else { %>
-                <h1>Kitap Bilgi Portalı'na Hoş Geldin</h1>
+                <h1>Kitap Bilgi Portalı'na<br>Hoş Geldin</h1>
             <% } %>
         </div>
         <div class="col">
