--- a/views/login.ejs
+++ b/views/login.ejs
@@ -65,4 +65,4 @@
 </main>
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/error.js"></script>
-<script src="/assets/js/login.js"></script>
+<script src="/assets/js/passwordShowHide.js"></script>
