--- a/views/admin/admin-panel.ejs
+++ b/views/admin/admin-panel.ejs
@@ -70,21 +70,21 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card bg-warning">
+                    <div class="card bg-danger text-white">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="bi bi-chat-left-text"></i> Yorumlar</h5>
-                            <p class="card-text">Toplam <%= statistics.totalComments %> yorum var</p>
-                            <a href="/admin-panel/comments" class="btn btn-light">Tümünü Görüntüle</a>
+                            <h5 class="card-title"><i class="bi bi-book"></i> Kitaplar</h5>
+                            <p class="card-text">Toplam <%= statistics.totalBooks %> kitap var</p>
+                            <a href="/admin-panel/books" class="btn btn-light">Tümünü Görüntüle</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card text-white bg-success">
+                    <div class="card bg-warning">
                         <div class="card-body">
-                            <h5 class="card-title">Analytics</h5>
-                            <p class="card-text">Check your analytics data.</p>
-                            <a href="#" class="btn btn-light">View Analytics</a>
+                            <h5 class="card-title"><i class="bi bi-chat-left-text"></i> Yorumlar</h5>
+                            <p class="card-text">Toplam <%= statistics.totalComments %> yorum var</p>
+                            <a href="/admin-panel/comments" class="btn btn-light">Tümünü Görüntüle</a>
                         </div>
                     </div>
                 </div>
