--- a/views/delete-book.ejs
+++ b/views/delete-book.ejs
@@ -14,14 +14,8 @@
     <% } %>
 
     <div class="container-fluid my-1">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/admin-panel/books">Kitaplar</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Kitabı Sil</li>
-            </ol>
-        </nav>
         <div class="d-flex align-items-center mb-3">
-            <a href="/admin-panel/books" class="btn btn-primary d-inline"><i class="bi bi-arrow-left"></i> Geri</a>
+            <a href="/account/mybooks" class="btn btn-primary d-inline"><i class="bi bi-arrow-left"></i> Geri</a>
             <h1 class="d-inline m-auto ms-2">Kitap Silme</h1>
         </div>
     </div>
