--- a/views/login.ejs
+++ b/views/login.ejs
@@ -47,10 +47,10 @@
 
             <div class="input-group mb-3">
                 <div class="form-floating">
-                    <input type="password" name="userPassword" class="form-control" id="userPasswordInput" placeholder="Enter Your Password" required>
+                    <input type="password" name="userPassword" class="form-control user-password-input" id="userPasswordInput" placeholder="Enter Your Password" data-toggle-id="1" required>
                     <label for="userPasswordInput">Şifreniz <span class="text-danger">*</span></label>
                 </div>
-                <button class="btn password-show-hide-toggle" type="button" style="background-color: #d3d4d5;"><i class="bi bi-eye-fill"></i></button>
+                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="1" style="background-color: #d3d4d5;"><i class="bi bi-eye-fill" data-toggle-id="1"></i></button>
             </div>
             
             <div class="row mb-2">
