--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,8 +1,6 @@
 body {
   background-color: #f8f9fa !important;
-  min-height: 100vh;
-  scrollbar-width: thin; /* Kaydırma çubuğu genişliği: 'auto', 'thin', 'none' */
-  scrollbar-color: #0d6efd #f1f1f1; /* thumb rengi ve track rengi */
+  min-height: 100vh !important;
 }
 
 /* Kaydırma çubuğunun tüm öğesini tanımlar */
@@ -57,6 +55,10 @@ textarea {
   background-color: #ffffff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
+.comment-user-name{font-size: 1rem;}
+.comment-date{font-size: 0.90rem;}
+.comment-text{font-size: 1.1rem;}
 
 @media print {
   body * {
