--- a/views/account.ejs
+++ b/views/account.ejs
@@ -9,6 +9,38 @@
             <% } %>
         </h2>
     </div>
+    <div class="row my-3">
+        <h3 class="mb-2"><i class="bi bi-stars"></i> Sana Özel</h3>
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card text-white bg-primary">
+                <div class="card-body">
+                    <h5 class="card-title"><i class="bi bi-book"></i> Kitaplar</h5>
+                    <p class="card-text">Toplam <%= statistics.totalBooks %> kitap</p>
+                    <a href="/books" class="btn btn-light">Tümünü Görüntüle</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card bg-danger text-white">
+                <div class="card-body">
+                    <h5 class="card-title"><i class="bi bi-book"></i> Eklediğim Kitaplar</h5>
+                    <p class="card-text">Toplam <%= statistics.totalMyBooks %> kitap ekledin</p>
+                    <a href="/account/mybooks" class="btn btn-light">Tümünü Görüntüle</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card bg-warning">
+                <div class="card-body">
+                    <h5 class="card-title"><i class="bi bi-chat-left-text"></i> Yorumlarım</h5>
+                    <p class="card-text">Toplam <%= statistics.totalComments %> yorumun var</p>
+                    <a href="/account/mycomments" class="btn btn-light">Tümünü Görüntüle</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="mb-2">
         <% if(userRole === 'admin')  { %>
             <a class="btn bg-primary text-light w-100" role="button" href="/admin-panel"><i class="bi bi-person-gear"></i> Yönetici Paneli</a>
@@ -100,144 +132,134 @@
             <button class="nav-link" id="other-tab" data-bs-toggle="tab" data-bs-target="#other-tab-pane" type="button" role="tab" aria-controls="other-tab-pane" aria-selected="false"><i class="bi bi-three-dots"></i> Diğer İşlemler</button>
         </li>
     </ul>
-        <div class="tab-content" id="accountTabsContent">
-        <div class="tab-pane fade show active" id="personalInfo-tab-pane" role="tabpanel" aria-labelledby="personalInfo-tab" tabindex="0">
-            <form id="userDataForm" class="form-floating my-3" method="POST">
-                <h4 class="display-5 mb-3 text-center">Kişisel Bilgilerim</h4>
-                <div class="d-flex justify-content-center align-items-center mb-3">
-                    <img class="rounded-circle avatar-img" src="/assets/img/avatars/<%= user.avatar %>.png" alt="ekinn.site Logo" style="width: calc(7rem + 4vw);">
+    <div class="tab-content" id="accountTabsContent">
+    <div class="tab-pane fade show active" id="personalInfo-tab-pane" role="tabpanel" aria-labelledby="personalInfo-tab" tabindex="0">
+        <form id="userDataForm" class="form-floating my-3" method="POST">
+            <h4 class="display-5 mb-3 text-center">Kişisel Bilgilerim</h4>
+            <div class="d-flex justify-content-center align-items-center mb-3">
+                <img class="rounded-circle avatar-img" src="/assets/img/avatars/<%= user.avatar %>.png" alt="ekinn.site Logo" style="width: calc(7rem + 4vw);">
+            </div>
+            <div class="input-group mb-3">
+                <div class="form-floating">
+                    <input type="text" name="userName" class="form-control" id="userNameInput" placeholder="Enter Your Name" value="<%= user.name %>" required readonly>
+                    <label for="userNameInput">Adınız <span class="text-danger">*</span></label>
                 </div>
-                <div class="input-group mb-3">
-                    <div class="form-floating">
-                        <input type="text" name="userName" class="form-control" id="userNameInput" placeholder="Enter Your Name" value="<%= user.name %>" required readonly>
-                        <label for="userNameInput">Adınız <span class="text-danger">*</span></label>
-                    </div>
-                    <button class="btn btn-success input-edit-btn" type="button"><i class="bi bi-pencil-square"></i></button>
-                </div>
+                <button class="btn btn-success input-edit-btn" type="button"><i class="bi bi-pencil-square"></i></button>
+            </div>
 
-                <div class="input-group mb-3">
-                    <div class="form-floating">
-                        <input type="text" name="userSurname" class="form-control" id="userSurnameInput" placeholder="Enter Your Surname" value="<%= user.surname %>" required readonly>
-                        <label for="userSurnameInput">Soyadınız <span class="text-danger">*</span></label>
-                    </div>
-                    <button class="btn btn-success input-edit-btn" type="button"><i class="bi bi-pencil-square"></i></button>
+            <div class="input-group mb-3">
+                <div class="form-floating">
+                    <input type="text" name="userSurname" class="form-control" id="userSurnameInput" placeholder="Enter Your Surname" value="<%= user.surname %>" required readonly>
+                    <label for="userSurnameInput">Soyadınız <span class="text-danger">*</span></label>
                 </div>
+                <button class="btn btn-success input-edit-btn" type="button"><i class="bi bi-pencil-square"></i></button>
+            </div>
 
-                <div class="form-floating mb-3">
-                    <input type="email" name="userEmail" class="form-control" id="userEmailInput" placeholder="Enter Your Email" value="<%= user.email %>" required disabled readonly>
-                    <label for="userEmailInput">E-postanız <span class="text-danger">*</span></label>
-                </div>
+            <div class="form-floating mb-3">
+                <input type="email" name="userEmail" class="form-control" id="userEmailInput" placeholder="Enter Your Email" value="<%= user.email %>" required disabled readonly>
+                <label for="userEmailInput">E-postanız <span class="text-danger">*</span></label>
+            </div>
 
-                <div class="row mb-2">
-                    <div class="col"><strong><%= new Date(user.joined_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></strong> tarihinden beridir üyesiniz</div>
-                </div>
-            
-                <div class="row mb-2">
-                    <div class="col text-danger">(*) zorunlu</div>
-                </div>
-                <button class="btn bg-success text-light w-100" type="submit">Değişiklikleri Kaydet</button>
-            </form>
-        </div>
-        <div class="tab-pane fade" id="avatar-tab-pane" role="tabpanel" aria-labelledby="avatar-tab" tabindex="1">
-            <ul class="list-group my-3">
-                <li class="list-group-item active">Avatarını Değiştir</li>
-                <li class="list-group-item">
-                    <select class="form-select avatar-select" aria-label="Default select example">
-                        <option selected>Değiştirmek için tıklayın</option>
-                        <option value="0">Sevimli Kedi</option>
-                        <option value="1">Sarı Ördek</option>
-                        <option value="2">Köy Muhtarı</option>
-                        <option value="3">Düşünceli Kadın</option>
-                        <option value="4">Zafer Adamı</option>
-                        <option value="5">Şimşek Lordu</option>
-                        <option value="6">Süper Araba</option>
-                        <option value="7">Korsan Yunus</option>
-                        <option value="8">Cadıların İksir Gecesi</option>
-                        <option value="9">Kadın Korsan</option>
-                        <option value="10">Erkek Korsan</option>
-                    </select>
-                </li>
-            </ul>
-        </div>
-        <div class="tab-pane fade" id="password-tab-pane" role="tabpanel" aria-labelledby="password-tab" tabindex="2">
-            <form action="/account?req=change-password" method="POST" class="form-floating my-3">
-                <h4 class="display-5 mb-3 text-center">Şifre İşlemleri</h4>
-                <div class="row my-4">
-                    <div class="col">
-                        <ul class="list-group">
-                            <li class="list-group-item active" aria-current="true"><i class="bi bi-clock-history"></i> Şifrenizi en son değiştirdiğiniz tarih</li>
-                            <li class="list-group-item"><%= user.lastPasswordUpdate_at ? new Date(user.lastPasswordUpdate_at).toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit' }) : "-" %></li>
-                        </ul>
-                    </div>
-                </div>
-                <h5 class="mt-1 mb-3"><i class="bi bi-lock"></i> Şifreni Değiştir</h5>
-
-                <div class="form-floating mb-3">
-                    <input type="password" name="userPassword" class="form-control" id="userPasswordInput" placeholder="Enter Your Current Password" required>
-                    <label for="userPasswordInput"> Mevcut Şifreniz <span class="text-danger">*</span></label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="password" name="userNewPassword" class="form-control" id="userNewPasswordInput" placeholder="Enter Your New Password" required>
-                    <label for="userNewPasswordInput"> Yeni Şifreniz <span class="text-danger">*</span></label>
-                    <div class="row password-validator my-1">
-                        <div class="row">
-                            <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifrenin uzunluğu en az 8 karakter olmalı</div>
-                        </div>
-                        <div class="row">
-                            <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifren en az 1 büyük ve 1 küçük harf içermeli</div>
-
-                        </div>
-                        <div class="row">
-                            <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifren en az 1 rakam içermeli</div>
-                        </div>
-                        <div class="row">
-                            <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifren "123" veya "6789" gibi art arda yazılmış 2'den fazla tahmin etmesi kolay ve sıralı rakamları içermemeli</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col text-danger">(*) zorunlu</div>
-                </div>
-                <button class="btn bg-primary text-light w-100" type="submit">Şifreni Değiştir</button>
-            </form>
-        </div>
-        <div class="tab-pane fade" id="other-tab-pane" role="tabpanel" aria-labelledby="other-tab" tabindex="3">
-            <div class="row my-3">
+            <div class="row mb-2">
+                <div class="col"><strong><%= new Date(user.joined_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></strong> tarihinden beridir üyesiniz</div>
+            </div>
+        
+            <div class="row mb-2">
+                <div class="col text-danger">(*) zorunlu</div>
+            </div>
+            <button class="btn bg-success text-light w-100" type="submit">Değişiklikleri Kaydet</button>
+        </form>
+    </div>
+    <div class="tab-pane fade" id="avatar-tab-pane" role="tabpanel" aria-labelledby="avatar-tab" tabindex="1">
+        <ul class="list-group my-3">
+            <li class="list-group-item active">Avatarını Değiştir</li>
+            <li class="list-group-item">
+                <select class="form-select avatar-select" aria-label="Default select example">
+                    <option selected>Değiştirmek için tıklayın</option>
+                    <option value="0">Sevimli Kedi</option>
+                    <option value="1">Sarı Ördek</option>
+                    <option value="2">Köy Muhtarı</option>
+                    <option value="3">Düşünceli Kadın</option>
+                    <option value="4">Zafer Adamı</option>
+                    <option value="5">Şimşek Lordu</option>
+                    <option value="6">Süper Araba</option>
+                    <option value="7">Korsan Yunus</option>
+                    <option value="8">Cadıların İksir Gecesi</option>
+                    <option value="9">Kadın Korsan</option>
+                    <option value="10">Erkek Korsan</option>
+                </select>
+            </li>
+            <li class="list-group-item">Değişiklikler otomatik kaydedilir ve hemen yansır</li>
+        </ul>
+    </div>
+    <div class="tab-pane fade" id="password-tab-pane" role="tabpanel" aria-labelledby="password-tab" tabindex="2">
+        <form action="/account?req=change-password" method="POST" class="form-floating my-3">
+            <h4 class="display-5 mb-3 text-center">Şifre İşlemleri</h4>
+            <div class="row my-4">
                 <div class="col">
                     <ul class="list-group">
-                        <li class="list-group-item active" aria-current="true">Hesap Silme</li>
-                        <li class="list-group-item"><a class="link-danger link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/account?req=delete-account"><i class="bi bi-person-dash"></i> Hesabımı Sil</a></li>
+                        <li class="list-group-item active" aria-current="true"><i class="bi bi-clock-history"></i> Şifrenizi en son değiştirdiğiniz tarih</li>
+                        <li class="list-group-item"><%= user.lastPasswordUpdate_at ? new Date(user.lastPasswordUpdate_at).toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit' }) : "-" %></li>
                     </ul>
                 </div>
             </div>
-        </div>
-        </div>
-    <div class="row">
-        <div class="col"><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/logout">Çıkış Yap</a></div>
+            <h5 class="mt-1 mb-3"><i class="bi bi-lock"></i> Şifreni Değiştir</h5>
+
+            <div class="input-group mb-3">
+                <div class="form-floating">
+                    <input type="password" name="userPassword" class="form-control user-password-input" id="userPasswordInput" placeholder="Enter Your Current Password" data-toggle-id="1" required>
+                    <label for="userPasswordInput"> Mevcut Şifreniz <span class="text-danger">*</span></label>
+                </div>
+                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="1" style="background-color: #d3d4d5;"><i class="bi bi-eye-fill" data-toggle-id="1"></i></button>
+            </div>
+
+            <div class="input-group mb-3">
+                <div class="form-floating">
+                    <input type="password" name="userNewPassword" class="form-control user-password-input" id="userNewPasswordInput" placeholder="Enter Your Password" data-toggle-id="2" required>
+                    <label for="userNewPasswordInput">Şifreniz <span class="text-danger">*</span></label>
+                </div>
+                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="2" style="background-color: #d3d4d5;"><i class="bi bi-eye-fill" data-toggle-id="2"></i></button>
+            </div>
+            <div class="row password-validator my-1">
+                <div class="row">
+                    <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifrenin uzunluğu en az 8 karakter olmalı</div>
+                </div>
+                <div class="row">
+                    <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifren en az 1 büyük ve 1 küçük harf içermeli</div>
+
+                </div>
+                <div class="row">
+                    <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifren en az 1 rakam içermeli</div>
+                </div>
+                <div class="row">
+                    <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifren "123" veya "6789" gibi art arda yazılmış 2'den fazla tahmin etmesi kolay ve sıralı rakamları içermemeli</div>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col text-danger">(*) zorunlu</div>
+            </div>
+            <button class="btn bg-primary text-light w-100" type="submit">Şifreni Değiştir</button>
+        </form>
     </div>
+    <div class="tab-pane fade" id="other-tab-pane" role="tabpanel" aria-labelledby="other-tab" tabindex="3">
+        <div class="row my-3">
+            <div class="col">
+                <ul class="list-group mb-3">
+                    <li class="list-group-item active" aria-current="true">Gizlilik Politikası</li>
+                    <li class="list-group-item"><a class="link-success link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/privacy-policies"><i class="bi bi-incognito"></i> Gizlilik Politikası</a></li>
+                </ul>
 
-    <div class="row my-3">
-        <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card text-white bg-primary">
-                <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-book"></i> Kitaplar</h5>
-                    <p class="card-text">Toplam <%= statistics.totalBook %> kitap</p>
-                    <a href="/books" class="btn btn-light">Tümünü Görüntüle</a>
-                </div>
+                <ul class="list-group">
+                    <li class="list-group-item active" aria-current="true">Hesap Silme</li>
+                    <li class="list-group-item"><a class="link-danger link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/account?req=delete-account"><i class="bi bi-person-dash"></i> Hesabımı Sil</a></li>
+                    <li class="list-group-item">Hesabına ait tüm bilgiler silinir</li>
+                </ul>
             </div>
         </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card bg-warning">
-                <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-chat-left-text"></i> Yorumlarım</h5>
-                    <p class="card-text">Toplam <%= statistics.totalComments %> yorumun var</p>
-                    <a href="/account/mycomments" class="btn btn-light">Tümünü Görüntüle</a>
-                </div>
-            </div>
-        </div>
+    </div>
     </div>
 </main>
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/error.js"></script>
 <script src="/assets/js/account.js"></script>
+<script src="/assets/js/passwordShowHide.js"></script>
