--- a/views/admin/search.ejs
+++ b/views/admin/search.ejs
@@ -57,10 +57,10 @@
                                         <a href="/admin-panel/books/<%= book.id %>" class="btn bg-success"><i class="bi bi-box-arrow-right text-light"></i></a>
                                     </div>
                                     <div class="col">
-                                        <a href="/admin-panel/books/edit-book/<%= book.id %>" class="btn bg-warning"><i class="bi bi-pencil-square"></i></a>
+                                        <a href="/books/edit-book/<%= book.id %>" class="btn bg-warning"><i class="bi bi-pencil-square"></i></a>
                                     </div>
                                     <div class="col">
-                                        <a href="/admin-panel/books/delete-book/<%= book.id %>" class="btn bg-danger text-light"><i class="bi bi-trash"></i></a>
+                                        <a href="/books/delete-book/<%= book.id %>" class="btn bg-danger text-light"><i class="bi bi-trash"></i></a>
                                     </div>
                                 </div>
                             </div>
