--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -2,13 +2,14 @@
     <h2 class="mb-3">Üye Listesi (<%= statistics.totalUser %> kişi)</h2>
     <% if(users.length > 0) { %>
         <div class="overflow-x-auto">
-            <table class="table table-striped">
+            <table class="table table-striped text-center">
                 <thead class="table-dark">
                     <tr>
                         <th scope="col">İsim</th>
                         <th scope="col">Soyisim</th>
                         <th scope="col">E-posta</th>
                         <th scope="col">Yetki</th>
+                        <th scope="col">Eklediği Kitap Sayısı</th>
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
@@ -18,6 +19,7 @@
                             <td><%= user.surname %></td>
                             <td><%= user.email %></td>
                             <td><%= user.role %></td>
+                            <td><%= statistics.totalMyBooks %></td>
                         </tr>
                     <% }); %>
                 </tbody>
