--- a/views/books.ejs
+++ b/views/books.ejs
@@ -1,9 +1,17 @@
 <main class="container-md py-4">
     <div class="container-fluid">
         <h1><%= "Tüm Kitaplar (" + (books.length > 0 ? books.length + ' adet)' : 'Hiç Kitap Yok)') %></h1>
-        <div class="row my-3">
-            <div class="col"><a href="/books/search" class="btn btn-outline-primary w-100" role="button"><i class="bi bi-search"></i> Kitap Ara</a></div>
-        </div>
+        
+        <% if(isAuthenticated) { %>
+            <div class="row row-cols-1 row-cols-md-2 my-3">
+                <div class="col"><a href="/books/add-book" class="btn btn-primary text-light mb-2 mb-md-auto w-100" role="button"><i class="bi bi-journal-plus"></i> Yeni Kitap Ekle</a></div>
+                <div class="col"><a href="/books/search" class="btn btn-outline-primary w-100" role="button"><i class="bi bi-search"></i> Kitap Ara</a></div>
+            </div>
+        <% } else { %>
+            <div class="row my-3">
+                <div class="col"><a href="/books/search" class="btn btn-outline-primary w-100" role="button"><i class="bi bi-search"></i> Kitap Ara</a></div>
+            </div>
+        <% } %>
 
         <% if(books.length > 0) { %>
             <div class="row my-2">
