--- a/views/books.ejs
+++ b/views/books.ejs
@@ -9,6 +9,11 @@
             </div>
         <% } else { %>
             <div class="row my-3">
+                <div class="col">
+                    <p class="border border-dark-subtle rounded-3 p-3">Kitap ekleyebilmek için lütfen <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/login">giriş yapın</a></p>
+                </div>
+            </div>
+            <div class="row my-3">
                 <div class="col"><a href="/books/search" class="btn btn-outline-primary w-100" role="button"><i class="bi bi-search"></i> Kitap Ara</a></div>
             </div>
         <% } %>
