--- a/views/mycomments.ejs
+++ b/views/mycomments.ejs
@@ -16,13 +16,10 @@
                         <div class="row">
                             <div class="col-8 col-sm-7 col-md-6 text-start">
                                 <div class="row">
-                                    <div class="col-12"><h5 class="card-title"><%= comment.name %></h5></div>
+                                    <div class="col-12"><h5 class="card-title comment-user-name"><%= comment.name %> <span class="card-subtitle text-muted comment-date">- <%= new Date(comment.created_at + ' UTC').toLocaleString('tr-TR', {day: 'numeric',month: 'long',year: 'numeric',hour: '2-digit',minute: '2-digit',timeZone: 'Asia/Istanbul',}) %></span></h5></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-12"><h6 class="card-subtitle mb-2 text-muted"><%= new Date(comment.created_at + ' UTC').toLocaleString('tr-TR', {day: 'numeric',month: 'long',year: 'numeric',hour: '2-digit',minute: '2-digit',timeZone: 'Asia/Istanbul',}) %></h6></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-12"><p class="card-text"><%= comment.comment %></p></div>
+                                    <div class="col-12"><p class="card-text comment-text"><%= comment.comment %></p></div>
                                 </div>
                             </div>
 
