--- a/views/admin/comments.ejs
+++ b/views/admin/comments.ejs
@@ -16,7 +16,7 @@
                         <div class="row">
                             <div class="col-8 col-sm-7 col-md-6 text-start">
                                 <div class="row">
-                                    <div class="col-12"><h5 class="card-title comment-user-name"><%= comment.name %> <span class="card-subtitle text-muted comment-date">- <%= new Date(comment.created_at + ' UTC').toLocaleString('tr-TR', {day: 'numeric',month: 'long',year: 'numeric',hour: '2-digit',minute: '2-digit',timeZone: 'Asia/Istanbul',}) %></span></h5></div>
+                                    <div class="col-12"><h5 class="card-title comment-user-name"><img class="rounded-circle avatar-img" src="/assets/img/avatars/<%= comment.avatar %>.png" width="48" loading="lazy"> <%= comment.name %> <span class="card-subtitle text-muted comment-date">- <%= new Date(comment.created_at + ' UTC').toLocaleString('tr-TR', {day: 'numeric',month: 'long',year: 'numeric',hour: '2-digit',minute: '2-digit',timeZone: 'Asia/Istanbul',}) %></span></h5></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12"><p class="card-text comment-text"><%= comment.comment %></p></div>
