--- a/views/account.ejs
+++ b/views/account.ejs
@@ -187,6 +187,9 @@
                     <option value="8">Cadıların İksir Gecesi</option>
                     <option value="9">Kadın Korsan</option>
                     <option value="10">Erkek Korsan</option>
+                    <option value="11">Yarasa</option>
+                    <option value="12">Noel Baba</option>
+                    <option value="13">Çöldeki Adam</option>
                 </select>
             </li>
             <li class="list-group-item">Değişiklikler otomatik kaydedilir ve hemen yansır</li>
